<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Open Up</string>
    <string name="title_activity_navigation">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="localhostURL">http://10.0.0.101:5000/</string>

    <string name="RegisterText" >Don\'t have an account? <u><b>Sign Up.</b></u></string>
    <string name="Username">Username<font fgcolor='#FF0000'>*</font></string>
    <string name="Password">Password<font fgcolor='#FF0000'>*</font></string>
    <string name="PasswordConfirm">Re-enter Password<font fgcolor='#FF0000'>*</font></string>
    <string name="FirstName">First Name<font fgcolor='#FF0000'>*</font></string>
    <string name="LastName">Last Name<font fgcolor='#FF0000'>*</font></string>
</resources>